fix form alignment

--- a/src/components/contactUs/ContactUsForm.module.scss
+++ b/src/components/contactUs/ContactUsForm.module.scss
@@ -9,12 +9,16 @@
     & .input-container {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
         width: 40%;
     }
 
-    & label .required {
-        font-size: 1.2rem;
+    & label {
+        align-self: flex-start;
+
+        & .required {
+            font-size: 1.2rem;
+        }
     }
 
     & input,
